--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-keras==3.2.1
-matplotlib==3.9.2
-numpy==2.1.2
-pandas==2.2.3
-Pillow==10.1.0
-Pillow==11.0.0
-plotly==5.22.0
-PyPDF2==3.0.1
-scikit_learn==1.5.2
-seaborn==0.13.2
-streamlit==1.35.0
+streamlit==1.26.0
+pandas==1.5.3
+numpy==1.23.5
+matplotlib==3.6.2
+seaborn==0.12.1
+scikit-learn==1.1.3
+requests==2.28.1
+gunicorn==20.1.0
+pandas-profiling
+joblib==1.4.2
